FIX: Colors to dark mode

--- a/frontend/src/app/analysis/components/analysis-table/analysis-table.component.scss
+++ b/frontend/src/app/analysis/components/analysis-table/analysis-table.component.scss
@@ -1,2 +1,31 @@
 #app-analysis-table {
+  th,
+  td {
+    color: var(--ion-color-dark);
+  }
+
+  table {
+    background-color: var(--ion-color-dark-contrast);
+  }
+  mat-paginator {
+    background-color: var(--ion-color-dark-contrast);
+    color: var(--ion-color-dark);
+  }
+
+  mat-card-content {
+    background-color: var(--ion-color-dark-contrast);
+    color: var(--ion-color-dark);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    padding: 2em;
+    height: 10em;
+
+    mat-card-subtitle {
+      display: flex;
+      align-items: center;
+    }
+  }
 }
