--- a/frontend/src/app/flowchart/pages/home/home.component.scss
+++ b/frontend/src/app/flowchart/pages/home/home.component.scss
@@ -13,6 +13,7 @@
 
   mat-card {
     height: 20em;
+    color: black;
     font-size: var(--font-24);
     font-weight: 800;
     text-align: center;
