--- a/frontend/src/theme/variables.scss
+++ b/frontend/src/theme/variables.scss
@@ -97,7 +97,7 @@
 }
 
 :root .dark-theme {
-  background-color: var(--cinza);
+  background-color: var(--ion-color-light-contrast);
   color: var(--ion-color-light);
 
   --ion-color-dark: var(--branco);
